# hotprevue

./: .gitignore  .vm-host  CHANGELOG.md  CLAUDE.md  Hotprevue.bat  Makefile  README.md  build-installer.ps1  build-zip.ps1  docker-compose.yml  hotprevue-admin.bat  hotprevue-admin.sh  hotprevue.sh  install.bat  install.sh  pyproject.toml
backend/: .dockerignore  .env.example  alembic.ini  hotprevue.spec  installer.py  main.py  pyproject.toml
backend/alembic/: env.py
backend/api/: admin.py  ai.py  auth.py  collections.py  events.py  file_copy.py  images.py  input_sessions.py  kinds.py  machines.py  photographers.py  photos.py  searches.py  settings.py  share.py  shortcuts.py  stacks.py  stats.py  system.py  tags.py  text_items.py
backend/core/: config.py  data_dir.py  local_setup.py
backend/database/: session.py
backend/middleware/: machine_auth.py
backend/models/: ai.py  category.py  collection.py  event.py  file_copy.py  image.py  input_session.py  kind.py  machine.py  machine_lock.py  photo.py  photo_field_edit.py  photographer.py  saved_search.py  settings.py  shortcut.py  stack.py  tag.py  text_item.py
backend/repositories/: event_repo.py  image_repo.py
backend/schemas/: collection.py  event.py  file_copy.py  image.py  input_session.py  kind.py  machine.py  machine_auth.py  photo.py  photographer.py  saved_search.py  settings.py  shortcut.py  stack.py  tag.py  text_item.py
backend/services/: access_filter.py  collection_service.py  event_service.py  file_copy_service.py  image_service.py  input_session_service.py  kind_service.py  photo_service.py  photographer_service.py  public_share_service.py  search_service.py  shortcut_service.py  stack_service.py  tag_service.py  text_item_service.py
backend/tests/: conftest.py
backend/tests/api/: test_tags.py  (+10 more)
backend/utils/: exif.py  file_copy.py  html_export.py  location_source.py  previews.py  quality.py  registration.py  time_source.py
client/: pyproject.toml
client/agent/: main.py
(+409 files in other folders)
