[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[project]
name = "hotprevue-client"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pillow>=10.0",
  "rawpy>=0.21",
  "exifread>=3.0",
  "imagehash>=4.3",
  "python-multipart>=0.0.22",
  "piexif>=1.1.3",
]
